--- a/PaginaInicial/PaginaInicial.css
+++ b/PaginaInicial/PaginaInicial.css
@@ -32,6 +32,7 @@ header {
 
 .mainStart img {
     padding: 30px 10px 10px 10px;
+    height: 500px;
 }
 
 .mainStart h1 {
@@ -66,11 +67,36 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap; 
     background-color: #ffffff;
-    color: #000000;
+    color: #5C7243;
     margin: auto;
+    padding-top: 50px;
+    font-weight: bold;
 }
 
+.cardDevs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; 
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.cardDevs img {
+    height: 400px;
+}
+
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; 
+    margin-left: 50px;
+    border: 1px ;
+    background-color: #CDE1B7;
+}
 
 /*ESTILIZAÇÃO RODAPÉ PAGINA PRINCIPAL APENAS*/
 #rodape {
