--- a/TelaCadastro/TelaCadastro.css
+++ b/TelaCadastro/TelaCadastro.css
@@ -13,8 +13,8 @@ body {
   margin: 0;
 }
 
-.container {
-  width: 350px;
+.container1 {
+  width: 600px;
   margin: 50px auto;
   padding: 60px;
   border: none;
@@ -42,23 +42,23 @@ input {
   margin-top: -2%;
 }
 
-button {
+#botao {
   padding: 10px;
   background-color: #A3C977;
   color: #fff;
   border: none;
-  border-radius: 10px;
+  border-radius: 4px;
   cursor: pointer;
   width: 50%;
   justify-content: center;
   margin-left: 25%;
+  margin-top: 5%;
   font-weight: bold;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: medium;
-  margin-bottom: -10%;
+  font-size: smaller;
 }
 
-button:hover {
+#botao:hover {
   background-color: #5C7243;
 }
 
@@ -91,4 +91,8 @@ h2 {
     padding-top: 60px;
     padding-bottom: 60px;
   }
+}
+#mensagem {
+  display: none;
+  color: red;
 }
