--- a/ItensCadastrados/ItensCadastrados.css
+++ b/ItensCadastrados/ItensCadastrados.css
@@ -1,84 +1,85 @@
 /* AJUSTE NO MAIN PARA POSICIONAR MENU LATERAL E CARD */
 main {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  /*ESTILIZAÇÃO DO MENU LATERAL*/
-  .menuLateral {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap; 
-    background-color: #5C7243;
-    max-width: 270px;
-    padding-top: 10px;
-    color: #ffffff;
-  }
-  
-  .menuLateral .list-group-item {
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: column;
-    background-color: #5C7243;
-    max-width: 270px;
-    padding: 15px 25px 15px 0;
-  }
-  
-  .menuLateral .list-group-item a {
-    margin-left: 20px;
-    color: #ffffff;
-    text-decoration: none;
-    font-weight: 600;
-  }
-  
-  .menuLateral p {
-    padding-top: 30px;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+}
+
+/*ESTILIZAÇÃO DO MENU LATERAL*/
+.menuLateral {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: #5C7243;
+  max-width: 270px;
+  padding-top: 10px;
+  color: #ffffff;
+  padding-bottom: 200px;
+}
+
+.menuLateral .list-group-item {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  background-color: #5C7243;
+  max-width: 270px;
+  padding: 15px 25px 15px 0;
+}
+
+.menuLateral .list-group-item a {
+  margin-left: 20px;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.menuLateral p {
+  padding-top: 30px;
+}
+
 /*ESTILIZAÇÃO DO SUBMENU*/
 .menuLateral .dropdown .list-group-item {
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: column;
-    background-color: #5C7243;
-    max-width: 270px;
-    padding: 15px 25px 16px 0;
-    border: none;
-  }
-  
-  .menuLateral .dropdown .list-group-item a {
-    margin: 0;
-  }
-  
-  .menuLateral .dropdown {
-    margin-left: 20px;
-    color: #ffffff;
-    text-decoration: none;
-    font-weight: 600;
-    display: block;
-  }
-  
-  .menuLateral .dropdown .dropdown-menu {
-    position: relative;
-    background-color: #5C7243;
-    border: none;
-  }
-  
-  .menuLateral .dropdown:hover .dropdown-menu {
-    display: block;
-    padding-left: 20px;
-  }
-  
-  .menuLateral .dropdown .list-group-item:hover {
-    color: #ffffff;
-  }
-  
-  /* Estilização para ocultar o botão de menu quando a tela for maior que 600px */
-    .menu-toggle {
-    display: none;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  background-color: #5C7243;
+  max-width: 270px;
+  padding: 15px 25px 16px 0;
+  border: none;
+}
+
+.menuLateral .dropdown .list-group-item a {
+  margin: 0;
+}
+
+.menuLateral .dropdown {
+  margin-left: 20px;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 600;
+  display: block;
+}
+
+.menuLateral .dropdown .dropdown-menu {
+  position: relative;
+  background-color: #5C7243;
+  border: none;
+}
+
+.menuLateral .dropdown:hover .dropdown-menu {
+  display: block;
+  padding-left: 20px;
+}
+
+.menuLateral .dropdown .list-group-item:hover {
+  color: #ffffff;
+}
+
+/* Estilização para ocultar o botão de menu quando a tela for maior que 600px */
+.menu-toggle {
+  display: none;
+}
 
 /* ESTILIZAÇÃO DO CARD */
 .containerCard {
@@ -90,10 +91,10 @@ main {
     width: 800px;
     padding: 20px;
     border-radius: 20px;
-    margin: auto;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-left: 200px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .containerCard h2 {
@@ -150,6 +151,7 @@ main {
     background-color: #E6E6E6;
 }
 
+
 /*ESTILIZAÇÃO RODAPÉ*/
 #rodape {
   background-color: #5C7243;
@@ -171,6 +173,50 @@ main {
   text-decoration: none;
 }
 
+@media only screen and (max-width: 1300px) {
+  .containerCard {
+    margin-left: 100px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .containerCard {
+    margin-left: 60px;
+    width: 700PX;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .containerCard {
+    margin-left: 40px;
+    width: 600PX;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .containerCard {
+    margin-left: 20px;
+    width: 500PX;
+  }
+
+  .containerCard input {
+    padding: 8px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .containerCard {
+    margin-left: 20px;
+    width: 400px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .containerCard {
+    margin-left: auto;
+  }
+}
+
 @media only screen and (max-width: 750px) {
   .menuLateral {
     display: none;
@@ -187,18 +233,54 @@ main {
     border: none;
     cursor: pointer;
     margin-top: 10px;
+    gap: 200px
   }
 
   .menu-toggle-img {
     margin-left: 40px;
   }
 
-  #botao-abrir-menu {
+  .dropdown-menu {
     background: #5C7243;
     border: none;
-    color: #ffffff;
     font-size: larger;
-    margin-left: 300px;
+  }
+
+  .dropdown-menu a {
+    color: #ffffff;
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .dropdown-menu a:hover {
+    color: #A3C977;
+  }
+
+  .dropdown {
+    color: #ffffff;
+    text-decoration: none;
+  }
+
+  .dropdown .dropdown-menu .list-group-item {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #5C7243;
+    height: 40px;
+    border: none;
+    position: relative;
+  }
+
+  .dropdown .dropdown-menu {
+    position: relative;
+    font-size: large;
+    padding-left: 10px;
+  }
+
+  .dropdown:hover .dropdown-menu,
+  .dropdown .dropdown-menu a:hover {
+    display: block;
   }
 
   header {
@@ -219,12 +301,26 @@ main {
     overflow-x: hidden;
   }
 
-  .containerCard{
-    margin: 100px auto 20px auto;
+  .containerCard {
+    margin-top: 100px;
+    margin-bottom: 20px;
+    margin-left: 110px;
   }
 }
 
-@media only screen and (max-width: 430px) {
+@media only screen and (max-width: 595px) {
+  .menu-toggle {
+      gap: 40px;
+  }
+
+  .containerCard {
+    margin-top: 100px;
+    margin-bottom: 20px;
+    margin-left: 25px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
   .menuLateral {
     display: none;
   }
@@ -240,6 +336,7 @@ main {
     border: none;
     cursor: pointer;
     margin-top: 10px;
+    gap: 20px;
   }
 
   .menu-toggle-img {
@@ -266,9 +363,76 @@ main {
     top: 0;
     height: 80px;
   }
-  
-  .containerCard{
-    margin: 150px -170px 80px 0px;
+
+  .containerCard {
+    margin-top: 150px;
+    margin-bottom: 60px;
+    margin-left: 18px;
+  }
+
+  footer {
+    display: flex;
+    margin-right: -50px;
+    margin-left: -110px;
+  }
+
+  #frase-impacto {
+    font-size:medium;
+  }
+
+  #rodape-conteudo {
+    margin-left: 50px;
+  }
+}
+
+@media only screen and (max-width: 430px) {
+  .menuLateral {
+    display: none;
+  }
+
+  .menuLateral.active {
+    display: flex;
+  }
+
+  .menu-toggle {
+    display: flex;
+    background: #5C7243;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+    margin-top: 10px;
+    gap: 250px;
+  }
+
+  .menu-toggle-img {
+    margin-left: 40px;
+  }
+
+  #botao-abrir-menu {
+    background: #5C7243;
+    border: none;
+    color: #ffffff;
+    font-size: larger;
+    margin-left: 550px;
+  }
+
+  header {
+    display: flex;
+  }
+
+  .corMenu {
+    display: flex;
+    background-color: #5C7243;
+    position: absolute;
+    width: 750px;
+    top: 0;
+    height: 80px;
+  }
+
+  .containerCard {
+    margin-top: 150px;
+    margin-bottom: 80px;
+    margin-left: 150px;
   }
 
   footer {
