--- a/TelaCadastro/TelaCadastro.css
+++ b/TelaCadastro/TelaCadastro.css
@@ -4,7 +4,8 @@ header {
   padding: 15px;
 }
 
-header a, header img {
+header a,
+header img {
   margin-left: 25px;
 }
 
@@ -14,13 +15,14 @@ body {
 }
 
 .container1 {
-  width: 600px;
-  margin: 50px auto;
+  width: 550px;
+  margin: 30px auto;
   padding: 60px;
   border: none;
   border-radius: 40px;
   background-color: #CDE1B7;
   color: #5C7243;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .cadastro {
@@ -30,16 +32,16 @@ body {
 
 label {
   margin-bottom: 8px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-top: 15px;
 }
 
 input {
-  padding: 13px;
+  padding: 10px;
   margin-bottom: 20px;
-  border-radius: 5px;
+  margin-top: -2%;
+  border-radius: 4px;
   background-color: #E6E6E6;
   border: none;
-  margin-top: -2%;
 }
 
 #botao {
@@ -51,10 +53,9 @@ input {
   cursor: pointer;
   width: 50%;
   justify-content: center;
-  margin-left: 25%;
-  margin-top: 5%;
+  margin-left: 90px;
+  margin-top: 40px;
   font-weight: bold;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: smaller;
 }
 
@@ -64,7 +65,6 @@ input {
 
 h2 {
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #5C7243;
   margin-top: -5%;
 }
@@ -72,26 +72,28 @@ h2 {
 /*ESTILIZAÇÃO RODAPÉ*/
 #rodape {
   background-color: #5C7243;
-  padding: 15px;
+  padding: 50px;
 }
 
-#frase-impacto{
+#frase-impacto {
   color: #FFFFFF;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: small;
+  font-size: larger;
 }
 
 /* FLEX-BOX PARA CELULAR */
 @media only screen and (max-width: 500px) {
-  .container {
-    margin: 20px auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 60px;
-    padding-bottom: 60px;
+  .container1 {
+    margin: 30px auto;
+    width: 400px;
+  }
+
+  #botao {
+    margin-left: 70px;
   }
 }
+
 #mensagem {
   display: none;
   color: red;
