--- a/TelaLogin/TelaLogin.css
+++ b/TelaLogin/TelaLogin.css
@@ -4,7 +4,8 @@ header {
   padding: 15px;
 }
 
-header a, header img {
+header a,
+header img {
   margin-left: 25px;
 }
 
@@ -17,18 +18,20 @@ body {
 /*Estilização do container*/
 .container-card-login {
   width: 350px;
-  margin: 30px auto;
+  margin: 40px auto;
   padding: 20px;
   border: none;
   border-radius: 40px;
   background-color: #CDE1B7;
   color: #5C7243;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 /*Estilização do titulo*/
 h2 {
+  padding-top: 20px;
   text-align: center;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #5C7243;
 }
 
@@ -36,13 +39,12 @@ h2 {
 .login {
   display: flex;
   flex-direction: column;
-  margin-top: -15px;
 }
 
 /*Estilização dos inputs*/
 label {
   margin-bottom: 8px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-top: 15px;
 }
 
 input {
@@ -64,11 +66,11 @@ input {
   cursor: pointer;
   width: 50%;
   justify-content: center;
-  margin-left: 25%;
-  margin-top: 5%;
+  margin-left: 75px;
+  margin-top: 40px;
   font-weight: bold;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: smaller;
+  margin-bottom: 20px;
 }
 
 #botao:hover {
@@ -79,15 +81,16 @@ input {
 p {
   justify-content: center;
   font-size: 60%;
-  margin-left: 25%;
+  text-align: center;
   color: #5C7243;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center;
 }
 
 #cadastre-se {
-  margin-left: 39%;
-  margin-top: -5px;
+  text-align: center;
   font-weight: bold;
+  text-decoration: none;
 }
 
 a {
@@ -100,13 +103,13 @@ a {
 
 /*ESTILIZAÇÃO RODAPÉ*/
 #rodape {
-    background-color: #5C7243;
-    padding: 15px;
+  background-color: #5C7243;
+  padding: 50px;
 }
 
-#frase-impacto{
-    color: #FFFFFF;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: small;
+#frase-impacto {
+  color: #FFFFFF;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
 }
