--- a/CadastroItens/CadastroItens.css
+++ b/CadastroItens/CadastroItens.css
@@ -36,6 +36,15 @@ main {
   padding-top: 30px;
 }
 
+#link-usuario:hover {
+  color: #CDE1B7;
+}
+
+#link-usuario {
+  text-decoration: none;
+  color: #ffffff;
+}
+
 /*ESTILIZAÇÃO DO SUBMENU*/
 .menuLateral .dropdown .list-group-item {
   display: flex;
