--- a/PerfilUsuario/PerfilUsuario.css
+++ b/PerfilUsuario/PerfilUsuario.css
@@ -49,7 +49,6 @@ body {
   border-radius: 10px;
   padding: 10px;
   margin-bottom: 18px;
-  width: 800px;
 }
 
 /*ESTILIZAÇÃO RODAPÉ*/
@@ -63,4 +62,14 @@ body {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
+}
+
+@media only screen and (max-width: 932px) {
+  .containerCard {
+    margin: 30px auto;
+    width: 400px;
+    padding: 20px;
+    border-radius: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
 }
