--- a/PaginaPrincipal/PaginaPrincipal.css
+++ b/PaginaPrincipal/PaginaPrincipal.css
@@ -104,6 +104,7 @@ main {
     background-color: #A3C977;
     font-size: smaller;
     border-radius: 20px;
+    text-decoration: none;
 }
 
 /*ESTILIZAÇÃO CARDS*/
