--- a/ItensCadastrados/ItensCadastrados.css
+++ b/ItensCadastrados/ItensCadastrados.css
@@ -83,11 +83,11 @@ main {
 
 /* ESTILIZAÇÃO DO CARD */
 .containerCard {
-   background-color: #CDE1B7;
+  background-color: #CDE1B7;
   color: #466F17;
-    border-radius: 20px;
+  border-radius: 20px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
- }
+}
 
 .containerCard h2 {
   display: flex;
@@ -104,7 +104,7 @@ main {
   border: none;
   border-radius: 10px;
   padding: 8px;
-  
+
 }
 
 /*ESTILIZAÇÃO LINHAS*/
@@ -120,15 +120,15 @@ main {
 
 .botao-mais-descricao,
 #icon-mais-descricao {
-   border: none;
+  border: none;
   font-size: 28px;
   color: #466F17;
   background-color: #ffffff;
-  
+
 }
 
-/*ESTILIZAÇÃO CAIXA DESCRICAO*/x
-#caixa-input {
+/*ESTILIZAÇÃO CAIXA DESCRICAO*/
+x #caixa-input {
   background-color: #E6E6E6;
   border: none;
   border-radius: 10px;
@@ -167,8 +167,7 @@ main {
 
 
 
-@media only screen and (max-width: 1000px) {
-}
+@media only screen and (max-width: 1000px) {}
 
 
 @media only screen and (max-width: 715px) {
@@ -256,6 +255,7 @@ main {
   }
 
 }
-.sem-espacamento tr{
+
+.sem-espacamento tr {
   line-height: 1;
 }
